--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Search_repositories",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://shugga939.github.io/Search_repositories/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
